load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/netdata/go.d.plugin/cmd/godplugin",
    visibility = ["//visibility:private"],
    deps = [
        "//modules/activemq:go_default_library",
        "//modules/apache:go_default_library",
        "//modules/bind:go_default_library",
        "//modules/cockroachdb:go_default_library",
        "//modules/consul:go_default_library",
        "//modules/coredns:go_default_library",
        "//modules/dnsmasq_dhcp:go_default_library",
        "//modules/dnsquery:go_default_library",
        "//modules/docker_engine:go_default_library",
        "//modules/dockerhub:go_default_library",
        "//modules/example:go_default_library",
        "//modules/fluentd:go_default_library",
        "//modules/freeradius:go_default_library",
        "//modules/hdfs:go_default_library",
        "//modules/httpcheck:go_default_library",
        "//modules/k8s_kubelet:go_default_library",
        "//modules/k8s_kubeproxy:go_default_library",
        "//modules/lighttpd:go_default_library",
        "//modules/lighttpd2:go_default_library",
        "//modules/logstash:go_default_library",
        "//modules/mysql:go_default_library",
        "//modules/nginx:go_default_library",
        "//modules/openvpn:go_default_library",
        "//modules/phpdaemon:go_default_library",
        "//modules/phpfpm:go_default_library",
        "//modules/pihole:go_default_library",
        "//modules/portcheck:go_default_library",
        "//modules/rabbitmq:go_default_library",
        "//modules/scaleio:go_default_library",
        "//modules/solr:go_default_library",
        "//modules/springboot2:go_default_library",
        "//modules/squidlog:go_default_library",
        "//modules/tengine:go_default_library",
        "//modules/unbound:go_default_library",
        "//modules/vcsa:go_default_library",
        "//modules/vsphere:go_default_library",
        "//modules/weblog:go_default_library",
        "//modules/wmi:go_default_library",
        "//modules/x509check:go_default_library",
        "//modules/zookeeper:go_default_library",
        "@com_github_jessevdk_go_flags//:go_default_library",
        "@com_github_netdata_go_orchestrator//:go_default_library",
        "@com_github_netdata_go_orchestrator//cli:go_default_library",
        "@com_github_netdata_go_orchestrator//logger:go_default_library",
        "@com_github_netdata_go_orchestrator//pkg/multipath:go_default_library",
    ],
)

go_binary(
    name = "godplugin",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
