load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "autodetection.go",
        "charts.go",
        "collect.go",
        "dhcp.go",
        "find.go",
    ],
    importpath = "github.com/netdata/go.d.plugin/modules/dnsmasq_dhcp",
    visibility = ["//visibility:public"],
    deps = [
        "//modules/dnsmasq_dhcp/ip:go_default_library",
        "@com_github_netdata_go_orchestrator//module:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["dhcp_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
