load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "charts.go",
        "example.go",
    ],
    importpath = "github.com/netdata/go.d.plugin/modules/example",
    visibility = ["//visibility:public"],
    deps = ["@com_github_netdata_go_orchestrator//module:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["example_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
