load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "charts.go",
        "collect.go",
        "freeradius.go",
    ],
    importpath = "github.com/netdata/go.d.plugin/modules/freeradius",
    visibility = ["//visibility:public"],
    deps = [
        "//modules/freeradius/api:go_default_library",
        "//pkg/stm:go_default_library",
        "//pkg/web:go_default_library",
        "@com_github_netdata_go_orchestrator//module:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["freeradius_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//modules/freeradius/api:go_default_library",
        "@com_github_netdata_go_orchestrator//module:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
