load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "charts.go",
        "mysql.go",
    ],
    importpath = "github.com/netdata/go.d.plugin/modules/mysql",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_sql_driver_mysql//:go_default_library",
        "@com_github_netdata_go_orchestrator//module:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["mysql_example_test.go"],
    embed = [":go_default_library"],
)
