load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "charts.go",
        "collect.go",
        "openvpn.go",
    ],
    importpath = "github.com/netdata/go.d.plugin/modules/openvpn",
    visibility = ["//visibility:public"],
    deps = [
        "//modules/openvpn/client:go_default_library",
        "//pkg/matcher:go_default_library",
        "//pkg/web:go_default_library",
        "@com_github_netdata_go_orchestrator//module:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["openvpn_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//modules/openvpn/client:go_default_library",
        "//pkg/matcher:go_default_library",
        "@com_github_netdata_go_orchestrator//module:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
