load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "charts.go",
        "pod_ping.go",
    ],
    importpath = "github.com/netdata/go.d.plugin/modules/pod_ping",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_fsnotify_fsnotify//:go_default_library",
        "@com_github_netdata_go_orchestrator//logger:go_default_library",
        "@com_github_netdata_go_orchestrator//module:go_default_library",
        "@com_github_sparrc_go_ping//:go_default_library",
    ],
)
