load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "charts.go",
        "collect.go",
        "collect_sdc.go",
        "collect_storage_pool.go",
        "collect_system.go",
        "metrics.go",
        "queries.go",
        "scaleio.go",
    ],
    importpath = "github.com/netdata/go.d.plugin/modules/scaleio",
    visibility = ["//visibility:public"],
    deps = [
        "//modules/scaleio/client:go_default_library",
        "//pkg/stm:go_default_library",
        "//pkg/web:go_default_library",
        "@com_github_netdata_go_orchestrator//:go_default_library",
        "@com_github_netdata_go_orchestrator//module:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["scaleio_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//modules/scaleio/client:go_default_library",
        "@com_github_netdata_go_orchestrator//module:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
