load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "charts.go",
        "springboot2.go",
    ],
    importpath = "github.com/netdata/go.d.plugin/modules/springboot2",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/matcher:go_default_library",
        "//pkg/metrics:go_default_library",
        "//pkg/prometheus:go_default_library",
        "//pkg/stm:go_default_library",
        "//pkg/web:go_default_library",
        "@com_github_netdata_go_orchestrator//module:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["springboot2_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
