load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "charts.go",
        "collect.go",
        "init.go",
        "logline.go",
        "metrics.go",
        "squidlog.go",
    ],
    importpath = "github.com/netdata/go.d.plugin/modules/squidlog",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/logs:go_default_library",
        "//pkg/metrics:go_default_library",
        "//pkg/stm:go_default_library",
        "@com_github_netdata_go_orchestrator//:go_default_library",
        "@com_github_netdata_go_orchestrator//module:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "logline_test.go",
        "squidlog_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//pkg/logs:go_default_library",
        "//pkg/metrics:go_default_library",
        "@com_github_netdata_go_orchestrator//module:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
