load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "charts.go",
        "collect.go",
        "collect_hosts.go",
        "collect_vms.go",
        "discover.go",
        "task.go",
        "vsphere.go",
    ],
    importpath = "github.com/netdata/go.d.plugin/modules/vsphere",
    visibility = ["//visibility:public"],
    deps = [
        "//modules/vsphere/client:go_default_library",
        "//modules/vsphere/discover:go_default_library",
        "//modules/vsphere/match:go_default_library",
        "//modules/vsphere/resources:go_default_library",
        "//modules/vsphere/scrape:go_default_library",
        "//pkg/web:go_default_library",
        "@com_github_netdata_go_orchestrator//:go_default_library",
        "@com_github_netdata_go_orchestrator//module:go_default_library",
        "@com_github_vmware_govmomi//performance:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "task_test.go",
        "vsphere_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//modules/vsphere/discover:go_default_library",
        "//modules/vsphere/resources:go_default_library",
        "@com_github_netdata_go_orchestrator//module:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@com_github_vmware_govmomi//performance:go_default_library",
        "@com_github_vmware_govmomi//simulator:go_default_library",
    ],
)
