load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "charts.go",
        "collect.go",
        "collect_collection.go",
        "collect_cpu.go",
        "collect_logical_disk.go",
        "collect_logon.go",
        "collect_memory.go",
        "collect_net.go",
        "collect_os.go",
        "collect_system.go",
        "metrics.go",
        "wmi.go",
    ],
    importpath = "github.com/netdata/go.d.plugin/modules/wmi",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/prometheus:go_default_library",
        "//pkg/stm:go_default_library",
        "//pkg/web:go_default_library",
        "@com_github_netdata_go_orchestrator//:go_default_library",
        "@com_github_netdata_go_orchestrator//module:go_default_library",
        "@com_github_prometheus_prometheus//pkg/labels:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["wmi_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "@com_github_netdata_go_orchestrator//module:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
