load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "charts.go",
        "client.go",
        "collect.go",
        "zookeeper.go",
    ],
    importpath = "github.com/netdata/go.d.plugin/modules/zookeeper",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/web:go_default_library",
        "@com_github_netdata_go_orchestrator//module:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "client_test.go",
        "zookeeper_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
