load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "counter.go",
        "gauge.go",
        "histogram.go",
        "metrics.go",
        "summary.go",
        "unique_counter.go",
    ],
    importpath = "github.com/netdata/go.d.plugin/pkg/metrics",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/stm:go_default_library",
        "@com_github_axiomhq_hyperloglog//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "counter_test.go",
        "gauge_test.go",
        "histogram_test.go",
        "summary_test.go",
        "unique_counter_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
