load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "metrics.go",
        "prometheus.go",
    ],
    importpath = "github.com/netdata/go.d.plugin/pkg/prometheus",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/web:go_default_library",
        "@com_github_prometheus_prometheus//pkg/labels:go_default_library",
        "@com_github_prometheus_prometheus//pkg/textparse:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "metrics_test.go",
        "prometheus_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/web:go_default_library",
        "@com_github_prometheus_prometheus//pkg/labels:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
