load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["stm.go"],
    importpath = "github.com/netdata/go.d.plugin/pkg/stm",
    visibility = ["//visibility:public"],
    deps = ["@com_github_netdata_go_orchestrator//logger:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["stm_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/metrics:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
