load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "duration.go",
        "request.go",
        "tls.go",
        "web.go",
    ],
    importpath = "github.com/netdata/go.d.plugin/pkg/web",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "client_test.go",
        "duration_test.go",
        "request_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)
